Revert "testing for combat service process combanant method"
This reverts commit 54d629624dd18f68974a2d4ac5996609b4f6ef24.